# nn-c

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  image.h  linear.h  main.c  mdarray.c  mdarray.h
tests/: CMakeLists.txt  test_mdarray.c
